[package]
name = "viu"
version = "1.4.0"
authors = ["Atanas Yankov <atanas.yankov98@gmail.com>"]
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/atanunq/viu"
description = "View images right from the terminal."
categories = ["command-line-utilities"]
keywords = ["terminal", "image", "gif"]
exclude = ["/img", "/.github"]

[dependencies]
clap = { version = "4.0", features = ["cargo"] }
crossterm = "0.25"
viuer = "0.7.0"
ctrlc = { version = "3.1", features = ["termination"] }
image = "0.24"

[features]
default = []
sixel = ["viuer/sixel"]
