[package]
name = "viu"
version = "1.5.1"
authors = ["Atanas Yankov <atanas.yankov98@gmail.com>"]
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/atanunq/viu"
description = "View images right from the terminal."
categories = ["command-line-utilities"]
keywords = ["terminal", "image", "gif"]
exclude = ["/img", "/.github"]

[dependencies]
clap = { version = "4.4", features = ["cargo"] }
crossterm = { version = "0.28", default-features = false }
viuer = { version = "0.9", features = ["print-file"] }
ctrlc = { version = "3.4", features = ["termination"] }
image = "0.25"

[features]
default = []
sixel = ["viuer/sixel"]
